# Study-Group-Recommendation-System

./: README.md  modules.py
algorithm/: CMakeLists.txt  bid_calculator.hpp  matcher.hpp
backend/: database.py  modules.py  schemas.py  students.py
frontend/: index.html  register.html  results.html
